[package]
name = "stream-locate-converter"
version = "0.1.0"
edition = "2021"
license-file = "./LICENSE"
description = "A Stream reader which can convert between byte offset and line-column numbers. Support any type which implements io::Read."
readme = "./README.md"
repository = "https://github.com/ireina7/stream-locate-converter"
keywords = ["offset", "converter"]

[dependencies]
